k8s/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: soncollab-frontend-service
  namespace: soncollab
  labels:
    app: soncollab-frontend
    environment: staging
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: soncollab-frontend
    environment: staging
