k8s/staging/servicemonitor.yml
apiVersion: v1
kind: Service
metadata:
  name: soncollab-frontend-metrics
  namespace: soncollab
  labels:
    app: soncollab-frontend
    monitoring: "true"
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9113"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - port: 9113
      targetPort: 9113
      protocol: TCP
      name: metrics
  selector:
    app: soncollab-frontend
