k8s/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soncollab-frontend-ingress
  namespace: soncollab
  labels:
    app: soncollab-frontend
    environment: staging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-gzip: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stg.soncollab.com
      secretName: soncollab-frontend-stg-tls
  rules:
    - host: stg.soncollab.com
      http:
        paths:
          - backend:
              service:
                name: soncollab-frontend-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
